[project]
name = "notelendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "importlib-metadata>=8.7.1",
    "libsass>=0.23.0",
    "pypugjs>=6.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "setuptools>=80.10.2",
]
